crates/tsuno-driver/tests/fixtures/snapshots/pass/verifies_large_u64_constant.rs
fn verifies_large_u64_constant() {
    let x = u64::MAX;
    //@ assert "{x} == 18446744073709551615u64"
}

fn main() {}
